@@ -1,3 +1,8 @@
+2003-08-27  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkListbox.c (ListboxSelect): Remove unused variable
+	'increment'.  [Bug 664783]
+
 2003-08-25   David Gravereaux <davygrvy@pobox.com>
 
 	* win/makefile.vc: Don't do a string compare on the $(DBGX)
